# mydomonline

./: .dockerignore  README.md  manage.py  pyproject.toml
core/: .env.Example  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py
mydomonline/: asgi.py  settings.py  urls.py  wsgi.py
